added new citations

--- a/ACM_final/bibliography.bib
+++ b/ACM_final/bibliography.bib
@@ -1641,3 +1641,215 @@ year         = {1993},
 publisher    = {Springer-Verlag},
 address      = {Berlin},
 }
+
+
+@article{laird_research_2002,
+	title = {Research in human-level {AI} using computer games},
+	volume = {45},
+	issn = {0001-0782},
+	url = {https://dl.acm.org/doi/10.1145/502269.502290},
+	doi = {10.1145/502269.502290},
+	number = {1},
+	urldate = {2025-10-26},
+	journal = {Commun. ACM},
+	author = {Laird, John E.},
+	month = jan,
+	year = {2002},
+	pages = {32--35},
+}
+
+@article{perez_serious_2023,
+	title = {Serious {Games} and {AI}: {Challenges} and {Opportunities} for {Computational} {Social} {Science}},
+	volume = {11},
+	issn = {2169-3536},
+	shorttitle = {Serious {Games} and {AI}},
+	url = {https://ieeexplore.ieee.org/abstract/document/10153609},
+	doi = {10.1109/ACCESS.2023.3286695},
+	abstract = {The gaming industry plays a crucial role in the realm of entertainment within our society. However, from Monopoly to Flight Simulators, serious games have also been appealing tools for learning a new language, conveying values, or training skills. The resurgence of Artificial Intelligence (AI) and data science in the last decade presents a unique window of opportunity for its integration into video games. This integration is of particular interest due to the vast amount of data that can be collected through a game, which is needed to feed the AI algorithms. This paper aims to identify relevant research paths in the intersection of serious games, AI, and computational social science, particularly in their utilization as novel research tools to comprehend human behavior and society. To provide a comprehensive context, we also present an overview of the serious game research field identifying the most prominent application areas and analyzing applications of AI in serious games that hold great potential for computational social science research. The goal of our work is to establish a valuable framework for researchers interested in utilizing serious games as a novel tool for AI-supported social research.},
+	urldate = {2025-10-26},
+	journal = {IEEE Access},
+	author = {Pérez, Jaime and Castro, Mario and López, Gregorio},
+	year = {2023},
+	keywords = {Games, Serious games, Video games, Computational modeling, artificial intelligence, Behavioral sciences, Artificial intelligence, Social sciences, computational social science, human behaviour, novel research tools, Recruitment},
+	pages = {62051--62061},
+}
+
+@article{hu_games_2024,
+	title = {Games for {Artificial} {Intelligence} {Research}: {A} {Review} and {Perspectives}},
+	volume = {5},
+	issn = {2691-4581},
+	shorttitle = {Games for {Artificial} {Intelligence} {Research}},
+	url = {https://ieeexplore.ieee.org/abstract/document/10552162},
+	doi = {10.1109/TAI.2024.3410935},
+	abstract = {Games have been the perfect test beds for artificial intelligence (AI) research for the characteristics that widely exist in real-world scenarios. Learning and optimization, decision-making in dynamic and uncertain environments, game theory, planning and scheduling, design, and education are common research areas shared between games and real-world problems. Numerous open-source games or game-based environments have been implemented to study AI. In addition to single- or multiplayer, collaborative, and adversarial games, there has also been growing interest in implementing platforms for creative design in recent years. Those platforms provide ideal benchmarks for exploring and comparing AI ideas and techniques. This article reviews the games and game-based platforms for AI research, provides guidance on matching particular types of AI with suitable games for testing and matching particular needs in games with suitable AI techniques, discusses the research trend induced by the evolution of those games and platforms, and gives an outlook.},
+	number = {12},
+	urldate = {2025-10-26},
+	journal = {IEEE Transactions on Artificial Intelligence},
+	author = {Hu, Chengpeng and Zhao, Yunlong and Wang, Ziqi and Du, Haocheng and Liu, Jialin},
+	month = dec,
+	year = {2024},
+	keywords = {Games, Video games, reinforcement learning, Reinforcement learning, computer games, Artificial intelligence, Internet, Competition, game artificial intelligence (AI), Game theory, Observability, procedural content generation (PCG), Procedural generation},
+	pages = {5949--5968},
+	file = {Snapshot:/Users/mjjohns/Zotero/storage/MY66Z2YI/10552162.html:text/html},
+}
+
+@article{melhart_ethics_2024,
+	title = {The {Ethics} of {AI} in {Games}},
+	volume = {15},
+	issn = {1949-3045},
+	url = {https://ieeexplore.ieee.org/abstract/document/10125072},
+	doi = {10.1109/TAFFC.2023.3276425},
+	abstract = {Video games are one of the richest and most popular forms of human-computer interaction and, hence, their role is critical for our understanding of human behaviour and affect at a large scale. As artificial intelligence (AI) tools are gradually adopted by the game industry a series of ethical concerns arise. Such concerns, however, have so far not been extensively discussed in a video game context. Motivated by the lack of a comprehensive review on the ethics of AI as applied to games, we survey the current state of the art in this area and discuss ethical considerations of these systems from the holistic perspective of the affective loop. Through the components of this loop, we study the ethical challenges that AI faces in video game development. Elicitation highlights the ethical boundaries of artificially induced emotions; sensing showcases the trade-off between privacy and safe gaming spaces; and detection, as utilised during in-game adaptation, poses challenges to transparency and ownership. This paper calls for an open dialogue and action for the games of today and the virtual spaces of the future. By setting an appropriate framework we aim to protect users and to guide developers towards safer and better experiences for their customers.},
+	number = {1},
+	urldate = {2025-10-26},
+	journal = {IEEE Transactions on Affective Computing},
+	author = {Melhart, David and Togelius, Julian and Mikkelsen, Benedikte and Holmgård, Christoffer and Yannakakis, Georgios N.},
+	month = jan,
+	year = {2024},
+	keywords = {Games, ethics, video games, Video games, Computational modeling, Industries, Artificial intelligence, Ethics, affective computing, Data models},
+	pages = {79--92},
+	file = {Snapshot:/Users/mjjohns/Zotero/storage/GA8TU63U/10125072.html:text/html},
+}
+
+@article{laird_human-level_2001,
+	title = {Human-{Level} {AI}'s {Killer} {Application}: {Interactive} {Computer} {Games}},
+	volume = {22},
+	copyright = {Copyright (c)},
+	issn = {2371-9621},
+	shorttitle = {Human-{Level} {AI}'s {Killer} {Application}},
+	url = {https://ojs.aaai.org/aimagazine/index.php/aimagazine/article/view/1558},
+	doi = {10.1609/aimag.v22i2.1558},
+	abstract = {Although one of the fundamental goals of AI is to understand and develop intelligent systems that have all the capabilities of humans, there is little active research directly pursuing this goal. We propose that AI for interactive computer games is an emerging application area in which this goal of human-level AI can successfully be pursued. Interactive computer games have increasingly complex and realistic worlds and increasingly complex and intelligent computer-controlled characters. In this article, we further motivate our proposal of using interactive computer games for AI research, review previous research on AI and games, and present the different game genres and the roles that human-level AI could play within these genres. We then describe the research issues and AI techniques that are relevant to each of these roles. Our conclusion is that interactive computer games provide a rich environment for incremental research on human-level AI.},
+	language = {en},
+	number = {2},
+	urldate = {2025-10-26},
+	journal = {AI Magazine},
+	author = {Laird, John and VanLent, Michael},
+	month = jun,
+	year = {2001},
+	pages = {15--15},
+}
+
+@inproceedings{togelius_ai_2017,
+	address = {Cham},
+	title = {{AI} {Researchers}, {Video} {Games} {Are} {Your} {Friends}!},
+	isbn = {978-3-319-48506-5},
+	doi = {10.1007/978-3-319-48506-5_1},
+	abstract = {If you are an artificial intelligence researcher, you should look to video games as ideal testbeds for the work you do. If you are a video game developer, you should look to AI for the technology that makes completely new types of games possible. This chapter lays out the case for both of these propositions. It asks the question “what can video games do for AI”, and discusses how in particular general video game playing is the ideal testbed for artificial general intelligence research. It then asks the question “what can AI do for video games”, and lays out a vision for what video games might look like if we had significantly more advanced AI at our disposal. The chapter is based on my keynote at IJCCI 2015, and is written in an attempt to be accessible to a broad audience.},
+	language = {en},
+	booktitle = {Computational {Intelligence}},
+	publisher = {Springer International Publishing},
+	author = {Togelius, Julian},
+	editor = {Merelo, Juan Julián and Rosa, Agostinho and Cadenas, José M. and Correia, António Dourado and Madani, Kurosh and Ruano, António and Filipe, Joaquim},
+	year = {2017},
+	keywords = {Games, Artificial intelligence, Artificial general intelligence},
+	pages = {3--18},
+}
+
+@article{yannakakis_ai_2005,
+	title = {{AI} in {Computer} {Games}: {Generating} {Interesting} {Interactive} {Opponents} by the use of {Evolutionary} {Computation}},
+	shorttitle = {{AI} in {Computer} {Games}},
+	url = {https://era.ed.ac.uk/handle/1842/879},
+	abstract = {Which features of a computer game contribute to the player’s enjoyment of it? How can 
+we automatically generate interesting and satisfying playing experiences for a given 
+game? These are the two key questions addressed in this dissertation. 
+Player satisfaction in computer games depends on a variety of factors; here the focus is 
+on the contribution of the behaviour and strategy of game opponents in predator/prey 
+games. A quantitative metric of the ‘interestingness’ of opponent behaviours is defined 
+based on qualitative considerations of what is enjoyable in such games, and a 
+mathematical formulation grounded in observable data is derived. Using this metric, 
+neural-network opponent controllers are evolved for dynamic game environments 
+where limited inter-agent communication is used to drive spatial coordination of opponent 
+teams. 
+Given the complexity of the predator task, cooperative team behaviours are investigated. 
+Initial candidates are generated using off-line learning procedures operating on 
+minimal neural controllers with the aim of maximising opponent performance. These 
+example controllers are then adapted using on-line (i.e. during play) learning techniques 
+to yield opponents that provide games of high interest. The on-line learning 
+methodology is evaluated using two dissimilar predator/prey games with a number 
+of different computer player strategies. It exhibits generality across the two game 
+test-beds and robustness to changes of player, initial opponent controller selected, and 
+complexity of the game field. 
+The interest metric is also evaluated by comparison with human judgement of game 
+satisfaction in an experimental survey. A statistically significant number of players 
+were asked to rank game experiences with a test-bed game using perceived interestingness 
+and their ranking was compared with that of the proposed interest metric. The 
+results show that the interest metric is consistent with human judgement of game satisfaction. 
+Finally, the generality, limitations and potential of the proposed methodology and techniques 
+are discussed, and other factors affecting the player’s satisfaction, such as the 
+player’s own strategy, are briefly considered. Future directions building on the work 
+described herein are presented and discussed.},
+	language = {en},
+	urldate = {2025-10-26},
+	author = {Yannakakis, Georgios N.},
+	month = dec,
+	year = {2005},
+	note = {Accepted: 2006-03-03T16:21:21Z
+Company: University of Edinburgh. College of Science and Engineering.  School of Informatics.
+Distributor: University of Edinburgh. College of Science and Engineering.  School of Informatics.
+Institution: University of Edinburgh. College of Science and Engineering.  School of Informatics.
+Label: University of Edinburgh. College of Science and Engineering.  School of Informatics.
+Publisher: University of Edinburgh. College of Science and Engineering. School of Informatics.},
+}
+
+@article{yin_ai_2023,
+	title = {{AI} in {Human}-computer {Gaming}: {Techniques}, {Challenges} and {Opportunities}},
+	volume = {20},
+	issn = {2731-5398},
+	shorttitle = {{AI} in {Human}-computer {Gaming}},
+	url = {https://doi.org/10.1007/s11633-022-1384-6},
+	doi = {10.1007/s11633-022-1384-6},
+	abstract = {With the breakthrough of AlphaGo, human-computer gaming AI has ushered in a big explosion, attracting more and more researchers all over the world. As a recognized standard for testing artificial intelligence, various human-computer gaming AI systems (AIs) have been developed, such as Libratus, OpenAI Five, and AlphaStar, which beat professional human players. The rapid development of human-computer gaming AIs indicates a big step for decision-making intelligence, and it seems that current techniques can handle very complex human-computer games. So, one natural question arises: What are the possible challenges of current techniques in human-computer gaming and what are the future trends? To answer the above question, in this paper, we survey recent successful game AIs, covering board game AIs, card game AIs, first-person shooting game AIs, and real-time strategy game AIs. Through this survey, we 1) compare the main difficulties among different kinds of games and the corresponding techniques utilized for achieving professional human-level AIs; 2) summarize the mainstream frameworks and techniques that can be properly relied on for developing AIs for complex human-computer games; 3) raise the challenges or drawbacks of current techniques in the successful AIs; and 4) try to point out future trends in human-computer gaming AIs. Finally, we hope that this brief review can provide an introduction for beginners and inspire insight for researchers in the field of AI in human-computer gaming.},
+	language = {en},
+	number = {3},
+	urldate = {2025-10-26},
+	journal = {Machine Intelligence Research},
+	author = {Yin, Qi-Yue and Yang, Jun and Huang, Kai-Qi and Zhao, Mei-Jing and Ni, Wan-Cheng and Liang, Bin and Huang, Yan and Wu, Shu and Wang, Liang},
+	month = jun,
+	year = {2023},
+	keywords = {AI, deep reinforcement learning, Human-computer gaming, intelligent decision making, self-play},
+	pages = {299--317},
+}
+
+@book{cakaj_modeling_2010,
+	title = {Modeling {Simulation} and {Optimization}: {Focus} on {Applications}},
+	isbn = {978-953-307-055-1},
+	shorttitle = {Modeling {Simulation} and {Optimization}},
+	abstract = {The book presents a collection of chapters dealing with a wide selection of topics concerning different applications of modeling. It includes modeling, simulation and optimization applications in the areas of medical care systems, genetics, business, ethics and linguistics, applying very sophisticated methods. Algorithms, 3-D modeling, virtual reality, multi objective optimization, finite element methods, multi agent model simulation, system dynamics simulation, hierarchical Petri Net model and two level formalism modeling are tools and methods employed in these papers.},
+	language = {en},
+	publisher = {BoD – Books on Demand},
+	author = {Cakaj, Shkelzen},
+	month = mar,
+	year = {2010},
+	note = {Google-Books-ID: tgmhDwAAQBAJ},
+	keywords = {Computers / General, Computers / Mathematical \& Statistical Software},
+}
+
+@inproceedings{feger_role_2019,
+	address = {New York, NY, USA},
+	series = {{CHI} {EA} '19},
+	title = {The {Role} of {HCI} in {Reproducible} {Science}: {Understanding}, {Supporting} and {Motivating} {Core} {Practices}},
+	isbn = {978-1-4503-5971-9},
+	shorttitle = {The {Role} of {HCI} in {Reproducible} {Science}},
+	url = {https://doi.org/10.1145/3290607.3312905},
+	doi = {10.1145/3290607.3312905},
+	abstract = {The reproducibility crisis refers to the inability to reproduce scientific experiments and is one of science's great challenges. Alarming reports and growing public attention are leading to the development of services and tools that aim to support key reproducible practices. In the face of this rapid evolution, we envision the unique opportunity for Human-Computer Interaction to impact scientific practice through the systematic study of requirements and moderating effects of technology on research reproducibility. In this paper, we report on the current state of technological and human factors in reproducible science and present challenges and opportunities for both HCI researchers and practitioners to understand, support and motivate core practices.},
+	urldate = {2025-10-26},
+	booktitle = {Extended {Abstracts} of the 2019 {CHI} {Conference} on {Human} {Factors} in {Computing} {Systems}},
+	publisher = {Association for Computing Machinery},
+	author = {Feger, Sebastian S. and Dallmeier-Tiessen, Sünje and Woźniak, Paweł W. and Schmidt, Albrecht},
+	month = may,
+	year = {2019},
+	pages = {1--6},
+}
+
+@inproceedings{greiffenhagen_is_2013,
+	title = {Is {Replication} important for {HCI}?},
+	volume = {976},
+	abstract = {Replication is emerging as a key concern within subsections of the HCI community. In this paper, we explore the relevance of science and technology studies (STS), which has addressed replication in various ways. Informed by this literature, we examine HCI's current relationship to replication and provide a set of recommendations and points of clarification that a replication agenda in HCI should concern itself with.},
+	author = {Greiffenhagen, Christian and Reeves, Stuart},
+	month = apr,
+	year = {2013},
+	file = {Full Text PDF:/Users/mjjohns/Zotero/storage/XJQ4SLVI/Greiffenhagen and Reeves - 2013 - Is Replication important for HCI.pdf:application/pdf},
+}
+
