document progress: started the intro and cleaned up organization a bit

--- a/FinalQuartoACM/references.bib
+++ b/FinalQuartoACM/references.bib
@@ -226,3 +226,20 @@ Publisher: University of Edinburgh. College of Science and Engineering. School o
 	year = {2013},
 	file = {Full Text PDF:/Users/mjjohns/Zotero/storage/XJQ4SLVI/Greiffenhagen and Reeves - 2013 - Is Replication important for HCI.pdf:application/pdf},
 }
+
+
+@inproceedings{eger_intentional_2017,
+	title = {An intentional {AI} for hanabi},
+	url = {https://ieeexplore.ieee.org/abstract/document/8080417},
+	doi = {10.1109/CIG.2017.8080417},
+	abstract = {Cooperative games with partial observability are a challenging domain for AI research, especially when the AI should cooperate with a human player. In this paper we investigate one such game, the award-winning card game Hanabi, which has been studied by other researchers before. We present an agent designed to play better with a human cooperator than these previous results by basing it on communication theory and psychology research. To demonstrate that our agent performs better with a human cooperator we ran an experiment in which 224 participants played one or more games of Hanabi with different AIs, and will show that our AI scores higher than previously published work in such a setting.},
+	urldate = {2025-11-27},
+	booktitle = {2017 {IEEE} {Conference} on {Computational} {Intelligence} and {Games} ({CIG})},
+	author = {Eger, Markus and Martens, Chris and Cordoba, Marcela Alfaro},
+	month = aug,
+	year = {2017},
+	note = {ISSN: 2325-4289},
+	keywords = {Artificial intelligence, Color, Computational intelligence, Conferences, Electronic mail, Encoding, Games},
+	pages = {68--75},
+	file = {Snapshot:/Users/mjjohns/Zotero/storage/HR78CT3C/8080417.html:text/html},
+}
