--- a/FinalQuartoACM/final.qmd
+++ b/FinalQuartoACM/final.qmd
@@ -8,19 +8,27 @@ author:
 bibliography: references.bib
 ---
 
-### 5.1.1 1. Introduction (≈0.75-1 page)
+# Introduction
 
--   Research question or paper overview
+In this reproduction, we consider the paper "*An intentional AI for hanabi*" [@eger_intentional_2017] and propose the following research questions which reproduce and extend the findings of the prior paper:
 
--   Background and motivation (make sure to include proper citations)
+-   RQ1: Does an intentional AI agent perform better in a collaborative game with a human than a baseline AI agent? (as measured by score)
 
--   Starting sample reference [@yannakakis_ai_2005]
+-   RQ2: Is the player’s perception of the AI agent (e.g. perceived skill and/or enjoyment of playing together) correlated with higher score, regardless of implementation?
 
--   Dataset description (source, size, key variables)
+-   RQ3: Can we use Machine Learning to predict human responses to improve game-playing AI for more compatible cooperation?
 
--   Study objectives
+### Background and Motivation
 
-### 5.1.2 2. Exploratory Data Analysis (≈1-1.5 pages)
+Game-playing AI has proven to be a useful test-bed for exploring decision-making AI implementations, and has attracted a wide range of researchers and research interests [@yin_ai_2023; @hu_games_2024]. Similarly, AI within games offer a valuable opportunity to understand human perception of interacting, and collaborating, with AI [@laird_research_2002; @yannakakis_ai_2005]. As we rapidly approach a state where humans and AI interact and cooperate on a daily basis, it is becoming increasingly important to (1) develop AIs that meaningfully cooperate with humans, and (2) understand what aspects of human-AI interaction are enjoyable, challenging, or unpleasant for humans. With this paper, we aim to contribute to further understanding AI implementations and human-AI interaction through an analysis of an intentional AI for the game of hanabi.
+
+### Dataset Description
+
+(source, size, key variables)
+
+### Study Objectives
+
+# Exploratory Data Analysis (≈1-1.5 pages)
 
 -   Summary statistics
 
@@ -84,7 +92,7 @@ plot(score_skill)
 
 -   A combination of original EDA and useful pieces of the EDA presented in the paper. If you use/reproduce a plot from the original paper in your report, give credit to the authors in the source.
 
-### 5.1.3 3. Methods (≈1-1.5 pages)
+# Methods (≈1-1.5 pages)
 
 **Track 1 (Paper Reproduction) should include:**
 
@@ -107,6 +115,8 @@ plot(score_skill)
 -   **Why these methods?** Connect to research questions and data structure
 
 -   Software and key R packages used (don’t forget to cite the R packages)
+
+# Results (≈2-2.5 pages)
 
 ```{r}
 #| echo: false
@@ -141,8 +151,6 @@ print(tukey_results)
 
 ```
 
-### 5.1.4 4. Results (≈2-2.5 pages)
-
 **Track 1 (Paper Reproduction) should include:**
 
 -   Summary of reproduction success/challenges
@@ -165,7 +173,7 @@ print(tukey_results)
 
 -   Key findings presented with visualizations
 
-### 5.1.5 5. Discussion & Conclusion (≈0.75-1 page)
+### Discussion & Conclusion (≈0.75-1 page)
 
 **Both tracks should include:**
 
@@ -181,10 +189,4 @@ print(tukey_results)
 
 -   A summary of what could be improved in the original paper and how your new analysis does exactly that.
 
-### 5.1.6 6. References
-
--   Not included in page count
-
--   Use consistent citation style (APA, Chicago, or similar)
-
--   Include at least 2-3 references beyond the dataset source
+# References
