--- a/FinalQuartoACM/final.qmd
+++ b/FinalQuartoACM/final.qmd
@@ -40,6 +40,8 @@ Our study has three main objectives. First is to reproduce the results from the 
 
 -   Preliminary insights that inform modeling choices
 
+We begin our reproduction by first exploring the data. The dataset consists of 240 rows/games and 14 columns, 10 of which being survey responses such as the player's perception of ai skill (1-5 scale) and enjoyment of playing with the ai (1-5 scale), while the others consist of game data, such as game score or the type of ai played with. We first checked for missing values and counted a total of 27 rows containing at least one missing value and thus decided to discard these rows for our subsequent analysis. Following this, we examined the distribution of scores, which can be seen in Figure 1. Inspecting this, we see that the distribution appears somewhat bimodal, with the most frequent score(s) being 17 and close to 17, and with distinct peaks at 5 and 9 as well. 
+
 ```{r}
 #| echo: false
 #| warning: false
@@ -52,34 +54,51 @@ library(dplyr)
 # Load the survey ratings data
 survey_response <- readr::read_csv('https://raw.githubusercontent.com/yawgmoth/HanabiData/refs/heads/master/participants.csv')
 
+#dim(survey_response)
+# count rows with NA entries
+#sum(rowSums(is.na(survey_response)) > 0) #27 rows with missing data
+
+
 # Preview the data
 # summary(survey_response)
 
 # cleanup and remove NAs
 survey_complete <- survey_response[complete.cases(survey_response),]
+survey_complete$ai <- survey_complete$ai %>% as.factor()
+survey_complete$gamer <- survey_complete$gamer %>% as.factor()
+survey_complete $age <- survey_complete$age %>% as.factor()
+#dim(survey_complete)
+#summary(survey_complete)
 
+
+# plot distribution of scores
+ggplot(survey_complete, aes(x = score)) + geom_bar(bins = 26, fill = "steelblue") + labs(title = "Figure 1", subtitle = "Distribution of Scores", x = "Score", y = "Count")
 
 # plot AI implementation vs score
 ggplot(survey_complete, aes(x = ai, y = score)) +
-  geom_boxplot()
+  geom_boxplot() + labs(title = "Figure 2", subtitle = "AI Implementation Played With vs Game Score", x = "AI Implementation", y = "Game Score")
 
 # plot percieved skill vs score
 ggplot(survey_complete, aes(x = skill, y = score)) +
   geom_point() +
-  geom_smooth(method = "lm", se = FALSE)
+  geom_smooth(method = "lm", se = FALSE) + labs(title = "Figure 3", subtitle = "Perceived Skill vs Game Score", x = "Percieved Skill", y = "Game Score")
 
 
 # aggregate score by perceived skill of AI
 score_skill <- aggregate(score ~ skill, data = survey_complete, FUN = mean)
+#score_skill
 
 # aggregated score by whether they liked the AI
 score_like <- aggregate(score ~ like, data = survey_complete, FUN = mean)
+#score_like
 
 # aggregate score by how intentional they thought the AI was
 score_intention <- aggregate(score ~ intention, data = survey_complete, FUN = mean)
+#score_intention
 
 # aggregate score by which AI was used
 score_ai <- aggregate(score ~ ai, data = survey_complete, FUN = mean)
+#score_ai
 
 # plot aggregated score by perceived skill
 plot(score_skill)
